[gd_scene load_steps=29 format=2]

[ext_resource path="res://Data/Sprites/MiniBear.png" type="Texture" id=1]
[ext_resource path="res://Entity/Scene1/Bear.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, 3 ), Vector2( 1, 3 ), Vector2( 2, 3 ), Vector2( 3, 3 ), Vector2( 4, 3 ), Vector2( 5, 3 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "clap"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0, 0.1, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 4 ), Vector2( 0, 0 ), Vector2( 0, 4 ), Vector2( 1, 4 ), Vector2( 2, 4 ), Vector2( 3, 4 ), Vector2( 4, 4 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 7 ), Vector2( 1, 7 ), Vector2( 2, 7 ), Vector2( 3, 7 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle_right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 3, 1 ), Vector2( 4, 1 ), Vector2( 5, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "clap"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=24]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachine" id=20]
states/attack/node = SubResource( 7 )
states/attack/position = Vector2( 439, 29 )
states/clap/node = SubResource( 8 )
states/clap/position = Vector2( 277, 100 )
states/death/node = SubResource( 9 )
states/death/position = Vector2( 277, 208 )
states/idle_right/node = SubResource( 10 )
states/idle_right/position = Vector2( 118, 29 )
states/walk/node = SubResource( 11 )
states/walk/position = Vector2( 118, 156 )
transitions = [ "idle_right", "attack", SubResource( 12 ), "attack", "idle_right", SubResource( 13 ), "idle_right", "clap", SubResource( 14 ), "clap", "idle_right", SubResource( 15 ), "idle_right", "walk", SubResource( 16 ), "walk", "idle_right", SubResource( 17 ), "idle_right", "death", SubResource( 18 ), "walk", "death", SubResource( 19 ), "attack", "clap", SubResource( 23 ), "clap", "attack", SubResource( 24 ), "clap", "death", SubResource( 25 ), "attack", "death", SubResource( 26 ) ]
start_node = "idle_right"
graph_offset = Vector2( -47, -9 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=21]

[sub_resource type="CapsuleShape2D" id=22]
radius = 6.0
height = 14.0

[node name="Bear" type="KinematicBody2D"]
collision_mask = 0
input_pickable = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -10.964 )
texture = ExtResource( 1 )
hframes = 10
vframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/attack = SubResource( 2 )
anims/clap = SubResource( 3 )
anims/death = SubResource( 4 )
anims/idle_right = SubResource( 5 )
anims/walk = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 20 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
rotation = 1.5708
shape = SubResource( 22 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Dead_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="input_event" from="." to="." method="_on_Bear_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Dead_timer" to="." method="_on_Dead_timer_timeout"]
